kube-manifiest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-svc
  labels:
    app: netflix-app
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 80
  selector:
    app: netflix-app
